mtls-external/with-gw/proxy-resources.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: host.docker.internal
spec:
  hosts:
    - host.docker.internal
  location: MESH_EXTERNAL
  ports:
    - number: 3128
      name: http
      protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bom-via-egress-gateway
spec:
  hosts:
    - www.bom.gov.au
  gateways:
    - istio-egressgateway
    - mesh
  http:
    - match:
        - gateways:
            - mesh
          port: 80
      route:
        - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
            port:
              number: 80
    - match:
        - gateways:
            - istio-egressgateway
          port: 80
      route:
        - destination:
            host: host.docker.internal
            port:
              number: 3128
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tunnel-tls
spec:
  host: host.docker.internal
  trafficPolicy:
    tunnel:
      protocol: CONNECT
      targetPort: 3128
      targetHost: host.docker.internal
